# roman-numerals-kata

./: .gitignore  CMakeLists.txt  Makefile  README  configure.ac
src/: CMakeLists.txt  Makefile.am  main.c  roman_numeral_calculator.c  roman_numeral_calculator.h
tests/: CMakeLists.txt  Makefile.am  check_roman_numeral_calculator.c
